# optimization-inspection-routes

./: .gitignore  README.md  pyproject.toml
data/: calibracion_aco.pkl  calibracion_tabu.pkl  historial_optuna_aco.csv  historial_optuna_tabu.csv  red_base_5x5.json  red_densa_10x10.json  red_realista_asim.json  resultados_fase2.jsonl
doc/: TPF_Informe_Alderete-Scalzo.tex
notebooks/: 01_calibracion_hiperparametros.ipynb  02_evaluacion_comparativa.ipynb
src/: aco.py  core_models.py  dashboard.py  graph_generator.py  graph_model.py  tabu.py
