[project]
name = "optimization-inspection-routes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "optuna>=4.9.0",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
]
