[project]
name = "optimization-inspection-routes"
version = "1.1.0"
description = "Optimización poblacional de rutas de inspección autónoma en redes de infraestructura lineal: Un enfoque basado en Optimización por Colonia de Hormigas (ACO) para el Problema de Enrutamiento de Arcos Capacitados (CARP)."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "optuna>=4.9.0",
    "plotly>=6.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
]
